--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,7 @@ header {
 body {
     margin: 0;
     padding: 0;
-    background-color: #f5f5f5;
+    background-color: white;
     font-family: Arial, sans-serif;
 }
 
@@ -131,4 +131,33 @@ h3 {
 .table tr:nth-child(even) {
     background-color: #f2f2f2;
 }
+
+/* Button Styles */
+/* Button Styles */
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px; /* Jarak antara gambar */
+    margin-top: 20px;
+}
+.beaver-img {
+    max-width: 200px; /* Ukuran khusus untuk gambar beaver */
+    height: auto;
+}
+
+.waktu-img {
+    max-width: 600px; /* Ukuran khusus untuk gambar waktu */
+    height: auto;
+}
+@media (max-width: 767px) {
+    .button {
+        flex-direction: column; 
+    }
+
+    .beaver-img, .waktu-img {
+        max-width: 100%; 
+    }
+}
+
 
